# HyperFrame

./: .gitignore  LICENSE  README.md  __init__.py  hyperpattern.py  pyproject.toml  run-tests.sh  setup.cfg  tabulate.py
.github/workflows/: ci.yml  release.yml
HyperFrame/: tabulate.py
hyperframe/: __init__.py  hyperpattern.py  tabulate.py
tests/: test_hyperframe.py
tests/fixtures/: beauhurst_expected_hyperframe_fixture.json
